--- a/Ajerly Platform/Ajerly Platform.csproj
+++ b/Ajerly Platform/Ajerly Platform.csproj
@@ -8,10 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-   
+    
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
+    <!-- Identity packages -->
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
